--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,28 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <video width="640" height="480" style="display: none;"></video>
-    <canvas width="640" height="480"></canvas>
-    <svg width="640" height="480">
-      <defs id="mdef">
-        <pattern id="typeA" x="0" y="0" height="40" width="40">
-          <image
-            x="0"
-            y="0"
-            width="50"
-            height="50"
-            xlink:href="/assets/type-a.png"
-          />
-          <pattern id="typeB" x="0" y="0" height="40" width="40">
-            <image
-              x="0"
-              y="0"
-              width="50"
-              height="50"
-              xlink:href="/assets/type-b.png"
-            />
-        </pattern>
-      </defs>
-    </svg>
+    <div id="wrapper"></div>
+    <video width="1024" height="768" style="display: none;"></video>
+    <canvas width="1024" height="768"></canvas>
+    <svg width="1024" height="768"></svg>
   </body>
 </html>
