--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
   <body>
     <div id="wrapper"></div>
