--- a/src/pages/choose.css
+++ b/src/pages/choose.css
@@ -3,7 +3,9 @@
   width: 300px;
   background-color: orange;
   padding: 10px;
+  font-size: 18px;
 }
+
 .option-main {
   width: 750px;
   margin-top: 100px;
